change network mode

--- a/infrastructure/docker-compose.yml
+++ b/infrastructure/docker-compose.yml
@@ -5,13 +5,12 @@ services:
     image: mysql:8.0
     container_name: mysql_db
     restart: always
+    network_mode: "host"
     environment:
       MYSQL_ROOT_PASSWORD: rootpassword
       MYSQL_DATABASE: mydb
       MYSQL_USER: user
       MYSQL_PASSWORD: userpassword
-    ports:
-      - "3306:3306"
     volumes:
       - mysql_data:/var/lib/mysql
 
