--- a/infrastructure/docker-compose.yml
+++ b/infrastructure/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       MYSQL_DATABASE: mydb
       MYSQL_USER: user
       MYSQL_PASSWORD: userpassword
+    ports:
+      - "3306:3306"
     volumes:
       - mysql_data:/var/lib/mysql
 
