change image name and service type

--- a/services/doctor-service/k8s/deployment.yaml
+++ b/services/doctor-service/k8s/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: doctor-service
-        image: doctor-service:latest
+        image: minurijayasooriya97/doctor-service:latest
         imagePullPolicy: Never
         ports:
         - containerPort: 3001
