--- a/services/doctor-service/k8s/deployment.yaml
+++ b/services/doctor-service/k8s/deployment.yaml
@@ -21,7 +21,7 @@ spec:
         - containerPort: 3001
         env:
         - name: DB_HOST
-          value: mysql
+          value: mysql-service
         - name: DB_USER
           valueFrom:
             secretKeyRef:
