--- a/services/appointment-service/package.json
+++ b/services/appointment-service/package.json
@@ -4,8 +4,8 @@
   "description": "Service for managing medical appointments",
   "main": "src/app.js",
   "scripts": {
-    "start": "node src/app.js",
-    "dev": "nodemon src/app.js"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
   "dependencies": {
     "express": "^4.18.2",
