--- a/services/appointment-service/package.json
+++ b/services/appointment-service/package.json
@@ -10,12 +10,10 @@
   "dependencies": {
     "express": "^4.18.2",
     "mysql2": "^3.6.5",
+    "sequelize": "^6.35.2",
     "dotenv": "^16.3.1",
-    "winston": "^3.11.0",
-    "joi": "^17.11.0",
     "cors": "^2.8.5",
-    "axios": "^1.6.2",
-    "moment": "^2.29.4"
+    "joi": "^17.11.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2",
