--- a/services/appointment-service/k8s/mysql-secret.yaml
+++ b/services/appointment-service/k8s/mysql-secret.yaml
@@ -4,5 +4,5 @@ metadata:
   name: mysql-secret
 type: Opaque
 data:
-  username: cm9vdA== # root in base64
-  password: cGFzc3dvcmQ= # password in base64
+  username: dXNlcg==      # 'user' in base64
+  password: dXNlcnBhc3N3b3Jk  # 'userpassword' in base64
