utilize api gateway

--- a/services/patient-service/k8s/service.yaml
+++ b/services/patient-service/k8s/service.yaml
@@ -6,6 +6,6 @@ spec:
   selector:
     app: patient-service
   ports:
-    - port: 8080
+    - port: 3000
       targetPort: 3000
-  type: LoadBalancer
+  type: ClusterIP
