--- a/services/appointment-service/k8s/service.yaml
+++ b/services/appointment-service/k8s/service.yaml
@@ -5,10 +5,10 @@ metadata:
   labels:
     app: appointment-service
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   ports:
-  - port: 3002
-    targetPort: 3002
+  - port: 3000
+    targetPort: 3000
     protocol: TCP
     name: http
   selector:
