--- a/services/doctor-service/k8s/service.yaml
+++ b/services/doctor-service/k8s/service.yaml
@@ -5,10 +5,10 @@ metadata:
   labels:
     app: doctor-service
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   ports:
-  - port: 3001
-    targetPort: 3001
+  - port: 3000
+    targetPort: 3000
     protocol: TCP
     name: http
   selector:
