--- a/services/appointment-service/k8s/service.yaml
+++ b/services/appointment-service/k8s/service.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: appointment-service
 spec:
-  type: ClusterIP
+  type: LoadBalancer
   ports:
   - port: 3000
     targetPort: 3000
