--- a/services/doctor-service/k8s/service.yaml
+++ b/services/doctor-service/k8s/service.yaml
@@ -5,9 +5,9 @@ metadata:
   labels:
     app: doctor-service
 spec:
-  type: ClusterIP
+  type: LoadBalancer
   ports:
-  - port: 3000
+  - port: 3001
     targetPort: 3000
     protocol: TCP
     name: http
