--- a/services/patient-service/k8s/service.yaml
+++ b/services/patient-service/k8s/service.yaml
@@ -2,10 +2,14 @@ apiVersion: v1
 kind: Service
 metadata:
   name: patient-service
+  labels:
+    app: patient-service
 spec:
+  type: LoadBalancer
+  ports:
+  - port: 3002
+    targetPort: 3000
+    protocol: TCP
+    name: http
   selector:
     app: patient-service
-  ports:
-    - port: 3000
-      targetPort: 3000
-  type: ClusterIP
