set deployment version

--- a/services/appointment-service/k8s/deployment.yaml
+++ b/services/appointment-service/k8s/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: appointment-service
-        image: minurijayasooriya97/appointment-service:latest
+        image: minurijayasooriya97/appointment-service:v1.0.0
         ports:
         - containerPort: 3000
         env:
