--- a/services/appointment-service/package.json
+++ b/services/appointment-service/package.json
@@ -1,7 +1,7 @@
 {
   "name": "appointment-service",
   "version": "1.0.0",
-  "description": "Service for managing medical appointments",
+  "description": "Appointment CRUD service",
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
@@ -13,7 +13,8 @@
     "sequelize": "^6.35.2",
     "dotenv": "^16.3.1",
     "cors": "^2.8.5",
-    "joi": "^17.11.0"
+    "joi": "^17.11.0",
+    "axios": "^1.6.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.2",
