--- a/services/doctor-service/package.json
+++ b/services/doctor-service/package.json
@@ -13,7 +13,8 @@
     "sequelize": "^6.35.2",
     "dotenv": "^16.3.1",
     "cors": "^2.8.5",
-    "joi": "^17.11.0"
+    "joi": "^17.11.0",
+    "axios": "^1.6.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
