--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,6 +54,7 @@ jobs:
         with:
           context: ./services/${{ matrix.service }}
           push: true
+          platforms: linux/amd64,linux/arm64
           tags: |
             minurijayasooriya97/${{ matrix.service }}:latest
             minurijayasooriya97/${{ matrix.service }}:${{ github.sha }}
