--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,25 +66,25 @@ jobs:
 
   deploy:
     needs: publish-images  # Run after publish-images job
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-      - name: Connect to local network via Twingate
-        uses: twingate/github-action@v1
-        with:
-          service-key: ${{ secrets.TWINGATE_SERVICE_KEY }}
-      - name: Configure SSH credentials
-        uses: webfactory/ssh-agent@v0.7.0
-        with:
-          ssh-private-key: ${{ secrets.MAC_MINI_PRIVATE_KEY }}
-      - name: Create SSH tunnel
-        run: ssh -N -L 18433:localhost:61648 remote@mac-mini.local &
+      # - name: Connect to local network via Twingate
+      #   uses: twingate/github-action@v1
+      #   with:
+      #     service-key: ${{ secrets.TWINGATE_SERVICE_KEY }}
+      # - name: Configure SSH credentials
+      #   uses: webfactory/ssh-agent@v0.7.0
+      #   with:
+      #     ssh-private-key: ${{ secrets.MAC_MINI_PRIVATE_KEY }}
+      # - name: Create SSH tunnel
+      #   run: ssh -N -L 18433:localhost:61648 remote@mac-mini.local &
 
-      - name: Deploy to Kubernetes cluster
-        uses: actionhub/kubectl@master
-        env:
-          KUBECONFIG: ${{ secrets.KUBECONFIG }}
-        with:
-          args: get pods
+      # - name: Deploy to Kubernetes cluster
+      #   uses: actionhub/kubectl@master
+      #   env:
+      #     KUBECONFIG: ${{ secrets.KUBECONFIG }}
+      #   with:
+      #     args: get pods
           
