--- a/services/ingestion-service/k8s/deployment.yaml
+++ b/services/ingestion-service/k8s/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: ingestion-service
-        image: minurijayasooriya97/ingestion-service:v1.2.1
+        image: minurijayasooriya97/ingestion-service:IMAGE_VERSION
         ports:
         - containerPort: 3000
         env:
