--- a/services/patient-service/k8s/deployment.yaml
+++ b/services/patient-service/k8s/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: patient-service
-        image: minurijayasooriya97/patient-service:v1.2.1
+        image: minurijayasooriya97/patient-service:IMAGE_VERSION
         ports:
         - containerPort: 3000
         env:
