--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,7 +71,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
       - name: Update version on deployment configs
-        run: sed -i "s/IMAGE_VERSION/${{ github.sha }}/g" services/*/k8s/*.yaml
+        run: sed -i '' "s/IMAGE_VERSION/${{ github.sha }}/g" services/*/k8s/*.yaml
       - name: Apply deployment configs
         run: |
           kubectl apply -f services/patient-service/k8s/deployment.yaml
