--- a/infrastructure/k8s/gateway.yaml
+++ b/infrastructure/k8s/gateway.yaml
@@ -3,28 +3,29 @@ kind: Ingress
 metadata:
   name: api-ingress
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /$2
+    nginx.ingress.kubernetes.io/use-regex: "true"
+    nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
   ingressClassName: nginx
   rules:
   - http:
       paths:
-      - path: /api/doctors(/|$)(.*)
-        pathType: Prefix
+      - path: /api/doctors/?(.*)
+        pathType: ImplementationSpecific
         backend:
           service:
             name: doctor-service
             port:
               number: 3001
-      - path: /api/patients(/|$)(.*)
-        pathType: Prefix
+      - path: /api/patients/?(.*)
+        pathType: ImplementationSpecific
         backend:
           service:
             name: patient-service
             port:
               number: 3002
-      - path: /api/appointments(/|$)(.*)
-        pathType: Prefix
+      - path: /api/appointments/?(.*)
+        pathType: ImplementationSpecific
         backend:
           service:
             name: appointment-service
